--- a/style.css
+++ b/style.css
@@ -1,3 +1,104 @@
-.head{
-    background-color: aqua;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+/*font family*/
+.inter-font{
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+/*body*/
+body{
+    background-color: #1A0B2E;
+    color: white;
+}
+
+/*Navbar design*/
+/*Navbar logo*/
+.navbar{
+    padding: 5px;
+    display: flex;
+    max-width: 1200px;
+    margin: 0 auto;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+
+}
+.navbar>div{
+    font-size: 30px;
+    font-weight: 600;
+    color: white;
+}
+.linear{
+    background: linear-gradient(180deg, rgba(145, 0, 248, 1), rgba(251, 9, 180, 1), rgba(247, 233, 63, 1));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+}
+/*Nav-bar Links*/
+.nav-links{
+    display: flex;
+    gap: 32px;
+    align-items: center;
+}
+.nav-links a{
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 500;
+    color: #ddd;
+}
+/*Nav-bar Button*/
+.navbar>button{
+    padding: 12px 16px 12px 16px;
+    border-radius: 25px;
+    background: var(--Linear, linear-gradient(47.64deg, rgba(247, 233, 63, 1),rgba(251, 9, 180, 1),rgba(145, 0, 248, 1)));
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 4px;
+    border: none;
+    cursor: pointer;
+}
+.btn-text{
+    font-size: 16px;
+    font-weight: 400;
+    color: white;
+    line-height: 1;
+}
+.btn-logo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.btn-logo img{
+    width: 20px;
+    height: 20px;
+    object-fit: contain;
+}
+.menu-icon{
+    display: none;
+}
+
+/* Mobile responsive layout*/
+@media screen and (max-width: 576px){
+    /*Navbar design*/
+    .navbar{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .nav-links, .navbar>button{
+        display: none;
+    }
+    .menu-icon{
+        display: block;
+        font-size: 20px;
+        cursor: pointer;
+    }
+
 }
