--- a/style.css
+++ b/style.css
@@ -367,6 +367,62 @@ body{
         font-size: 20px;
         cursor: pointer;
     }
+
+    /*features design*/
+   .features,
+   .meet-the-host {
+    padding: 30px 15px;
+  }
+
+  .section-title,
+  .host-title {
+    font-size: 28px;
+    text-align: center;
+    margin-bottom: 25px;
+  }
+
+  .episodes-grid {
+    grid-template-columns: 1fr; 
+    gap: 20px;
+  }
+
+  
+  .episode-card {
+    padding: 15px;
+    border-radius: 16px;
+  }
+
+  .episode-card h3 {
+    font-size: 18px;
+    margin-bottom: 8px;
+  }
+
+  .episode-card p {
+    font-size: 14px;
+    line-height: 1.5;
+    margin-bottom: 12px;
+  }
+
+  .episode-time {
+    font-size: 12px;
+    gap: 6px;
+  }
+
+  .episode-time .dot {
+    width: 8px;
+    height: 8px;
+  }
+
+  .video-wrapper {
+    height: 180px;
+    border-radius: 12px;
+  }
+
+  .play-overlay img {
+    width: 50px;
+    height: 50px;
+  }
+
     /*Meet the host design*/
     .host-container{
         padding: 20px;
