--- a/style.css
+++ b/style.css
@@ -123,6 +123,65 @@ body{
     width: 35%;
 }
 
+/*choice section*/
+.why-techwave {
+    background-color: #230e3d;
+    color: #fff;
+}
+
+.choose-container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 80px 20px;
+}
+
+.choose-title {
+    text-align: center;
+    font-size: 3rem;
+    font-weight: 700;
+    margin-bottom: 60px;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, auto);
+    gap: 32px;
+}
+
+/* CARD */
+.card {
+    background: rgba(53, 17, 101, 0.4);
+    border-radius: 32px;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.card img {
+    width: 48px;
+    height: 48px;
+}
+
+.card h3 {
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+.card p {
+    color: rgba(255, 255, 255, 0.6);
+    line-height: 1.6;
+}
+
+.card.tall {
+    grid-row: span 2;
+}
+
+.card.wide {
+    grid-column: span 2;
+}
+
 /*Feature episodes section*/
 .episodes-container {
   max-width: 1200px;
@@ -161,7 +220,7 @@ body{
 .video-wrapper iframe {
   width: 100%;
   height: 100%;
-  pointer-events: none;
+  cursor: pointer;
 }
 
 .episode-card h3 {
@@ -366,6 +425,33 @@ body{
         display: block;
         font-size: 20px;
         cursor: pointer;
+    }
+
+    /*why choose card design*/
+    .container {
+        padding: 40px 20px;
+    }
+
+    .section-title {
+        font-size: 2rem;
+        margin-bottom: 32px;
+    }
+
+    .grid {
+        grid-template-columns: 1fr;
+        gap: 24px;
+    }
+
+    .card,
+    .card.tall,
+    .card.wide {
+        grid-column: span 1;
+        grid-row: span 1;
+        padding: 24px;
+    }
+
+    .card h3 {
+        font-size: 1.25rem;
     }
 
     /*features design*/
