--- a/style.css
+++ b/style.css
@@ -87,42 +87,65 @@ body{
 .menu-icon{
     display: none;
 }
-/*hero design*/
-.hero-container{
-    border: 2px solid red;
-    min-height: 400 px;
-    padding: 10px;
-    display: grid;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-.hero-top{
-    border: 2px solid green;
-    min-height: 200px;
-    width: 35%;
-}
-.hero-bottom{
-    border: 2px solid blue;  
-    min-height: 200px;  
-    width: 35%;
-}
-.hero-bottom h1{
-    font-size: 60px;
-    font-weight: 800;
-}
-.hero-bottom p{
-    font-size: 16px;
-    font-weight: 400;
-    opacity: 0.8;
-    margin-top: 8px;
-    margin-bottom: 28px;
-}
-.hero-button{
-    border: 2px solid pink;  
-    min-height: 200px; 
-    width: 35%;
+/*About Section*/
+.about {
+  background: radial-gradient(circle at top, #2b0f47, #0c0218);
+  padding: 80px 20px;
 }
 
+.about-container {
+  max-width: 1100px;
+  margin: auto;
+  text-align: center;
+}
+
+.about-title {
+  font-size: 40px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.about-description {
+  font-size: 15px;
+  line-height: 1.8;
+  color: #cfc8e3;
+  max-width: 800px;
+  margin: 0 auto 60px;
+  opacity: 0.8;
+}
+
+.stats {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 40px;
+}
+
+.stat {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.stat i {
+  font-size: 28px;
+  color: #00ffb2;
+  margin-bottom: 12px;
+}
+
+.stat h3 {
+  font-size: 48px;
+  font-weight: 900;
+  color: #00ffb2;
+  margin-bottom: 6px;
+}
+
+.stat span {
+  font-size: 13px;
+  opacity: 0.8;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #cfc8e3;
+}
 /*choice section*/
 .why-techwave {
     background-color: #230e3d;
@@ -149,7 +172,7 @@ body{
     gap: 32px;
 }
 
-/* CARD */
+
 .card {
     background: rgba(53, 17, 101, 0.4);
     border-radius: 32px;
@@ -426,6 +449,40 @@ body{
         font-size: 20px;
         cursor: pointer;
     }
+
+    /*about us design*/
+    .about {
+    padding: 60px 15px;
+  }
+
+  .about-title {
+    font-size: 28px;
+    line-height: 1.3;
+  }
+
+  .about-description {
+    font-size: 14px;
+    line-height: 1.7;
+    margin-bottom: 40px;
+  }
+
+  .stats {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 25px;
+  }
+
+  .stat i {
+    font-size: 22px;
+  }
+
+  .stat h3 {
+    font-size: 26px;
+  }
+
+  .stat span {
+    font-size: 11px;
+    text-align: center;
+  }
 
     /*why choose card design*/
     .container {
