--- a/style.css
+++ b/style.css
@@ -87,9 +87,140 @@ body{
 .menu-icon{
     display: none;
 }
+
+/*Hero Banner Section*/
+.hero {
+  height: 100vh;
+  background-image: url("assets/hero-bg.png");
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.overlay {
+  position: absolute;
+  inset: 0;
+  background: rgba(10, 2, 24, 0.75);
+}
+
+.content {
+  position: relative;
+  text-align: center;
+  color: #fff;
+  z-index: 2;
+}
+
+.logo-wrapper {
+  position: relative;
+  display: inline-block;
+  margin-bottom: 30px;
+  z-index: 5;
+}
+.logo-circle{
+    position: relative;
+    width: 120px;
+    height: 120px;
+    z-index: 1;
+}
+.circle{
+    width: 350px;
+    height: 350px;
+    display: block;
+    z-index: 1;
+}
+.mic{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 110px;
+    height: 200px;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+}
+
+.badge {
+  position: absolute;
+  top: 17px;
+  right: 20px;
+  padding: 6px 14px;
+  border: 2px solid #00ff9c;
+  background-color: #00ff9c;
+  color: black;
+  border-radius: 20px;
+  font-size: 13px;
+  font-weight: 600;
+  animation: pulse 1.5s infinite;
+  z-index: 3;
+  
+}
+
+h1 {
+  font-size: 48px;
+  margin-bottom: 10px;
+}
+
+p {
+  font-size: 15px;
+  opacity: 0.8;
+  margin-bottom: 30px;
+}
+
+.buttons {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+}
+
+.btn {
+  padding: 12px 28px;
+  border-radius: 30px;
+  text-decoration: none;
+  font-size: 14px;
+  transition: all 0.3s ease;
+}
+
+.btn-gradient {
+  background: linear-gradient(135deg, #ff4ecd, #ffb347);
+  color: #fff;
+}
+
+.btn-gradient:hover {
+  transform: scale(1.1);
+  box-shadow: 0 0 20px rgba(255, 78, 205, 0.6);
+}
+
+.btn-outline {
+  border: 2px solid #00ff9c;
+  color: #00ff9c;
+  background: transparent;
+}
+
+.btn-outline:hover {
+  background: #00ff9c;
+  color: #000;
+  transform: scale(1.1);
+}
+
+@keyframes pulse {
+  0% {
+    box-shadow: 0 0 0 0 rgba(0, 255, 156, 0.6);
+  }
+  70% {
+    box-shadow: 0 0 0 15px rgba(0, 255, 156, 0);
+  }
+  100% {
+    box-shadow: 0 0 0 0 rgba(0, 255, 156, 0);
+  }
+}
+
+
 /*About Section*/
 .about {
-  background: radial-gradient(circle at top, #2b0f47, #0c0218);
+  background: radial-gradient( #2b0f47, #0c0218);
   padding: 80px 20px;
 }
 
@@ -146,6 +277,7 @@ body{
   letter-spacing: 1px;
   color: #cfc8e3;
 }
+
 /*choice section*/
 .why-techwave {
     background-color: #230e3d;
@@ -171,7 +303,6 @@ body{
     grid-template-rows: repeat(3, auto);
     gap: 32px;
 }
-
 
 .card {
     background: rgba(53, 17, 101, 0.4);
@@ -362,7 +493,6 @@ body{
     object-fit: contain;
 }
 
-
 /*Footer styling*/
 .footer{
     display: flex;
@@ -449,6 +579,8 @@ body{
         font-size: 20px;
         cursor: pointer;
     }
+
+   
 
     /*about us design*/
     .about {
