--- a/style.css
+++ b/style.css
@@ -173,6 +173,7 @@ p {
   display: flex;
   gap: 20px;
   justify-content: center;
+  align-items: center;
 }
 
 .btn {
@@ -181,6 +182,8 @@ p {
   text-decoration: none;
   font-size: 14px;
   transition: all 0.3s ease;
+  align-items: center;
+  gap: 8px;
 }
 
 .btn-gradient {
